# cqg_helper

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  CQGSession.cpp  CQGSession.h  WebsocketClient.cpp  WebsocketClient.h
test/: CMakeLists.txt  login.cpp  logon.cpp  mock_server.cpp  mock_server.h  mock_server_main.cpp  mock_server_test.cpp
